--- a/P3-Largest prime factor/Largest prime factor.ipynb
+++ b/P3-Largest prime factor/Largest prime factor.ipynb
@@ -58,14 +58,47 @@
     "    largest_prime_factor = 1\n",
     "    # print(\"The factors of\",x,\"are:\")\n",
     "    for i in range(1, x//2):\n",
-    "       if sympy.isprime(i) and x % i == 0:\n",
+    "        if sympy.isprime(i):\n",
+    "            if x%i==0:\n",
+    "                largest_prime_factor = i\n",
+    "       #if sympy.isprime(i) and x % i == 0:\n",
+    "            \n",
     "           #print(i)\n",
-    "           largest_prime_factor = i\n",
+    "           \n",
     "          \n",
     "    return largest_prime_factor\n",
     "\n",
     "print(largest_prime_factors(600851475143))\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 600851475143"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "600851475143"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
    ]
   },
   {
