P6-Sum square difference

--- a/P3-Largest prime factor/Largest prime factor.ipynb
+++ b/P3-Largest prime factor/Largest prime factor.ipynb
@@ -49,7 +49,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "is factor:  71\n",
+      "is factor:  839\n",
+      "is factor:  1471\n",
+      "is factor:  6857\n"
+     ]
+    }
+   ],
    "source": [
     "# Python Program to find the primefactors of a number\n",
     "\n",
@@ -58,9 +69,11 @@
     "    largest_prime_factor = 1\n",
     "    # print(\"The factors of\",x,\"are:\")\n",
     "    for i in range(1, x//2):\n",
-    "        if sympy.isprime(i):\n",
-    "            if x%i==0:\n",
-    "                largest_prime_factor = i\n",
+    "        if x%i==0 and sympy.isprime(i):\n",
+    "            print('is factor: ',i)\n",
+    "            #if sympy.isprime(i):\n",
+    "                #print('isprime: ',i)\n",
+    "            largest_prime_factor = i\n",
     "       #if sympy.isprime(i) and x % i == 0:\n",
     "            \n",
     "           #print(i)\n",
